--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
       fbq('init', '810492475960801');
       fbq('track', 'PageView');
      
+      window.fbq = fbq;
+      
     </script>
     <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=810492475960801&ev=PageView&noscript=1"
