--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
       'https://connect.facebook.net/en_US/fbevents.js');
       fbq('init', '311103189605724');
       fbq('track', 'PageView');
+      
+      window.fbq = fbq;
+      
     </script>
     <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=311103189605724&ev=PageView&noscript=1"
