--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       t.src=v;s=b.getElementsByTagName(e)[0];
       s.parentNode.insertBefore(t,s)}(window, document,'script',
       'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '311103189605724', {'em': 'user.email'});
+      fbq('init', '311103189605724', {'email': 'thw@fb.com', 'fn': 'john', 'ln': 'smith'});
       fbq('track', 'PageView');
       
       window.fbq = fbq;
